--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ button:active{
 
 
 
-@media screen and (max-width: 500px){
+@media (max-width: 500px){
     #keys{
         grid-template-columns: repeat(4, 70px);
     }
@@ -91,5 +91,10 @@ button:active{
     #calculator{
         max-width: 350px;
     }
-    
+    #key{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
